<resources>
    <string name="app_name">LoginSignupSystem</string>
    <string name="london_traveller">London Traveller</string>
    <string name="signup_register">\n</string>
    <string name="welcome_to_london_traveller">\n</string>
    <string name="welcome_to_my_app">Welcome to my App</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="sign_up">Sign up</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="have_an_account_login">Have an account? login</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="register">Register</string>
    <string name="button">Button</string>
    <string name="log_out">Log out</string>
    <string name="select">Select</string>
    <string name="tour_list">Tour List</string>
    <string name="log_oout">Log Out</string>
    <string name="shopping">Shopping</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="art">Art</string>
    <string name="landmarks">landmarks</string>
    <string name="museums">museums</string>
    <string name="categories">Categories</string>
    <string name="home_page">Home Page</string>
    <string name="your_bookings">Your Bookings</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settingss">Settings</string>
    <string name="bookings">Bookings</string>
    <string name="tour_image">tour image</string>
    <string name="read_less">Read Less</string>
    <string name="read_more">Read more +</string>
</resources>