<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".controller.SignupActivity">

    <!--Title-->
    <!--Name input-->

    <TextView
        android:id="@+id/signupTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/signupName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:layout_constraintVertical_bias="1.0" />

    <!--Phone number input-->
    <EditText
        android:id="@+id/signupName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="264dp"
        android:ems="10"
        android:hint="@string/enter_your_name"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/signupPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="1dp"
        android:ems="10"
        android:textColorHint="@color/white"
        android:inputType="phone"
        android:hint="@string/enter_your_phone_number"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/signupEmail"
        app:layout_constraintTop_toBottomOf="@+id/signupEmail" />
    <!--Password input-->
    <EditText
        android:id="@+id/signupPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:textColorHint="@color/white"
        android:inputType="textPassword"
        android:hint="@string/enter_your_password"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/signupPhone"
        app:layout_constraintTop_toBottomOf="@+id/signupPhone"
        android:autofillHints="" />
    <!--Email input-->
    <EditText
        android:id="@+id/signupEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:textColorHint="@color/white"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_your_email_address"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/signupName"
        app:layout_constraintTop_toBottomOf="@+id/signupName"
        android:autofillHints="" />
    <!--Sign up errors text-->
    <TextView
        android:id="@+id/regErrors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text=""
        android:textColor="#FF0909"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/signupReg"
        app:layout_constraintEnd_toEndOf="@+id/signupPassword"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="@+id/signupPassword" />
    <!--Sign up button-->
    <!--Login button-->
    <Button
        android:id="@+id/signupReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/register"
        app:layout_constraintBottom_toTopOf="@+id/signupLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/signupLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:text="@string/have_an_account_login"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupPassword" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="343dp"
        android:layout_height="133dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/travelers_logo"
        tools:layout_editor_absoluteY="3dp" />

</androidx.constraintlayout.widget.ConstraintLayout>