<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/DrawerLayout"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:padding="20dp"
        tools:context=".activities.MainActivity">


        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="20dp"
            android:background="@android:color/holo_purple"
            app:cardCornerRadius="20dp"
            app:cardElevation="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_goneMarginEnd="20dp"
            app:layout_goneMarginTop="30dp">

            <com.denzcoskun.imageslider.ImageSlider
                android:id="@+id/imageSlider"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:iss_auto_cycle="true"
                app:iss_corner_radius="20"
                app:iss_delay="1000"
                app:iss_period="1000"
                app:iss_title_background="@drawable/landscapeone" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="28dp"
            android:text=""
            android:textColor="#FFFFFF"
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@+id/cardView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.836" />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/categories"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            app:layout_constraintVertical_bias="0.0" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/museums"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/museums"
            android:contentDescription="@string/museums"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"/>
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/landmarks"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/landmarks"
            android:contentDescription="@string/landmarks"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"/>
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/art"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/art"
            android:contentDescription="@string/art"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/museums"/>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/shopping"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/shopping"
            android:contentDescription="@string/shopping"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/landmarks"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

